@@ -84,6 +84,8 @@ Version 1.3.1+svn:
      which the attack engine didn't expect (bug #8814)
    * new key for [time], sound=, to specify a list of sounds that can play
      when ToD changes
+   * more powerful [filter_location], now accepts radius=, [not], and 
+     [filter] to match units at the location
  * user interface:
    * new sounds for user interface events
    * added the option to show warnings about deprecated WML usage
